# streamlit_chat_input_fileupload

./: .copier-answers.yml  .env.example  LICENSE  Makefile  README.md  app.py  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: ci.yml
lib_streamlit_chat_with_fileupload/: __init__.py  config.py
lib_streamlit_chat_with_fileupload/chat_input_with_upload/: __init__.py
lib_streamlit_chat_with_fileupload/chat_input_with_upload/frontend/: index.html
streamlit_chat_input_fileupload/: __init__.py  config.py
tests/: test_component.py  test_data.py
