[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-chat-input-fileupload"
version = "0.6.15"
description = "Streamlit custom component that offers chat input box for messages - with files upload widget"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [ "Programming Language :: Python :: 3",]
dependencies = [ "boto3", "python-dotenv", "streamlit",]
license = "MIT"
[[project.authors]]
name = "Stellars Henson"
email = "konrad.jelen@gmail.com"

[project.optional-dependencies]
dev = [ "build", "ipykernel", "ipython", "nbdime", "pip", "pytest", "pytest-cov", "toml", "ruff", "twine",]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 99
src = [ "streamlit_chat_input_fileupload",]
include = [ "pyproject.toml", "streamlit_chat_input_fileupload/**/*.py",]

[tool.ruff.lint]
extend-select = [ "I",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "streamlit_chat_input_fileupload*",]
exclude = [ "tests*",]

[tool.ruff.lint.isort]
known-first-party = [ "streamlit_chat_input_fileupload",]
force-sort-within-sections = true
