[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-chat-input-fileupload"
version = "0.6.16"
description = "Streamlit custom component that offers chat input box for messages - with files upload widget"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [ "Programming Language :: Python :: 3",]
dependencies = [ "boto3", "python-dotenv", "streamlit",]
license = "MIT"
[[project.authors]]
name = "Stellars Henson"
email = "konrad.jelen@gmail.com"

[project.optional-dependencies]
dev = [ "build", "ipykernel", "ipython", "nbdime", "pip", "pytest", "pytest-cov", "toml", "ruff", "twine",]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 99
src = [ "streamlit_chat_input_fileupload", "tests",]
include = [ "pyproject.toml", "streamlit_chat_input_fileupload/**/*.py", "tests/**/*.py",]

[tool.ruff.lint]
extend-select = [ "I", "E", "W", "F", "B", "C4", "UP", "SIM",]
ignore = [ "E501",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_functions = [ "test_*",]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "streamlit_chat_input_fileupload*",]
exclude = [ "tests*",]

[tool.ruff.lint.isort]
known-first-party = [ "streamlit_chat_input_fileupload",]
force-sort-within-sections = true
